--- a/dove/style/css/style.css
+++ b/dove/style/css/style.css
@@ -229,6 +229,27 @@ i {
     box-sizing: border-box; }
 
 /*=================COMMON=============*/
+.preload {
+  position: fixed;
+  z-index: 9999;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  left: 50%;
+  top: 50%;
+  -webkit-transition: opacity 0.5s;
+  -moz-transition: opacity 0.5s;
+  -ms-transition: opacity 0.5s;
+  transition: opacity 0.5s; }
+  .preload img {
+    position: absolute;
+    width: 100px;
+    height: 98px;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); }
+
 .clearfix:after {
   content: "";
   display: table;
