--- a/dove/style/css/style.css
+++ b/dove/style/css/style.css
@@ -229,19 +229,19 @@ i {
     box-sizing: border-box; }
 
 /*=================COMMON=============*/
-.preload {
+.preloader {
   position: fixed;
   z-index: 9999;
   width: 100%;
   height: 100%;
   background: #fff;
-  left: 50%;
-  top: 50%;
   -webkit-transition: opacity 0.5s;
   -moz-transition: opacity 0.5s;
   -ms-transition: opacity 0.5s;
   transition: opacity 0.5s; }
-  .preload img {
+  .preloader img {
+    left: 50%;
+    top: 50%;
     position: absolute;
     width: 100px;
     height: 98px;
