--- a/dove/style/sass/style.scss
+++ b/dove/style/sass/style.scss
@@ -95,17 +95,17 @@ i {pointer-events: none;} //prevent element from being event target
 
 /*=================COMMON=============*/
 
-.preload {
+.preloader {
   position: fixed;
   z-index: 9999;
   width: 100%;
   height: 100%;
   background: #fff;
-  left: 50%;
-  top: 50%;
   @include transition(opacity 0.5s);
 
   img {
+    left: 50%;
+    top: 50%;
     position: absolute;
     width: 100px;
     height: 98px;
